[#1]代码注释及包结构调整